added instructions page and main theme

--- a/title.html
+++ b/title.html
@@ -10,8 +10,13 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Graduate&family=Oxanium:wght@200..800&family=Press+Start+2P&display=swap"
     rel="stylesheet"/>
+  
 </head>
-<body>
+<body>  
+  <audio id="background-music" src='./audio/title-screen-theme.mp3' preload="auto" loop></audio>
+  <button id="play-music-btn" style="position: absolute; top: 20px; right: 20px; z-index: 10;">
+    🎵 Play Music
+  </button>
   <div id="title-container">
     <h1 id="game-title">
       Blades of Bushido
