--- a/game.html
+++ b/game.html
@@ -120,5 +120,5 @@
   ></script>
   <script src="js/utils.js"></script>
   <script src="js/classes.js"></script>
-  <script src="index.js"></script>
+  <script src="./js/game.js"></script>
 </body>
